--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "bootstrap": "^5.3.3",
     "luxon": "^3.5.0",
     "react": "^18.3.1",
+    "react-animated-weather": "^4.0.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
-    "vue-skycon": "^1.1.0",
-    "vue-skycons": "^4.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
